# rustapp

./: Cargo.toml
src/: cors.rs  main.rs  routes.rs
