[package]
name = "rust_app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
neo4j = "0.1.0"
tokio = { version = "1", features = ["full"] }  # for async runtime support
dotenv = "0.15"  # to load environment variables
warp = "0.3.7"